Implement delete confirmation modal and refactor toast notifications with message constants for improved user feedback

--- a/.hintrc
+++ b/.hintrc
@@ -41,7 +41,8 @@
       {
         "html-has-lang": "off"
       }
-    ]
+    ],
+    "no-inline-styles": "off"
   },
   "browserslist": [
     "defaults",
